test10/results/test_Agi25.err
  File "/home/gejza/vyuka/l2021/ps/zadanie1/tests/test10/../../riesenia/Agi25/mboxer/tcpserver.py", line 19
    if pid_chld==0:
    ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/home/gejza/vyuka/l2021/ps/zadanie1/tests/test10/test.py", line 164, in <module>
    s.connect(('localhost',9999))
ConnectionRefusedError: [Errno 111] Connection refused
